added theme without Action Bar, Fullscreen
localized to strings

Signed-off-by: resilientCoder <04216af3@opayq.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="vs">vs.</string>
     <string name="yellow_card">yellow card</string>
     <string name="red_card">red card</string>
+    <string name="_0">0</string>
 </resources>
